--- a/LojourProperties.Web/Areas/Main/Pages/PropertySection/Section/UpdateVideo.cshtml
+++ b/LojourProperties.Web/Areas/Main/Pages/PropertySection/Section/UpdateVideo.cshtml
@@ -107,6 +107,11 @@
                         </label>
                     </div>
 
+                    <div class="form-group form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" asp-for="Video.VR" /> Is VR Video
+                        </label>
+                    </div>
 
 
 
@@ -119,8 +124,7 @@
 
                     <div class="form-group">
                         <input type="submit" value="Submit" class="btn btn-primary" />
-                        <a asp-page="./Index" class="btn bg-gradient-warning btn-sm" style="float:right;">Back</a>
-
+ 
                     </div>
                 </form>
             </div>
