--- a/LojourProperties.Web/Areas/Main/Pages/Slides/Create.cshtml
+++ b/LojourProperties.Web/Areas/Main/Pages/Slides/Create.cshtml
@@ -59,7 +59,16 @@
                 <input asp-for="Slider.ButtonLink" class="form-control" />
                 <span asp-validation-for="Slider.ButtonLink" class="text-danger"></span>
             </div>
-
+                    <div class="form-group">
+                        <label asp-for="Slider.SortOrder" class="control-label"></label>
+                        <input asp-for="Slider.SortOrder" class="form-control" />
+                        <span asp-validation-for="Slider.SortOrder" class="text-danger"></span>
+                    </div>
+                    <div class="form-group form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" asp-for="Slider.IsVideo" /> @Html.DisplayNameFor(model => model.Slider.IsVideo)
+                        </label>
+                    </div>
                     <div class="form-group">
                         <label asp-for="Slider.Url" class="control-label">Main Image</label>
                         <input type="file" class="control-label" asp-for="file" />
