--- a/LojourProperties.Web/Areas/Main/Pages/Slides/Edit.cshtml
+++ b/LojourProperties.Web/Areas/Main/Pages/Slides/Edit.cshtml
@@ -64,14 +64,44 @@
                 <input asp-for="Slider.ButtonLink" class="form-control" />
                 <span asp-validation-for="Slider.ButtonLink" class="text-danger"></span>
             </div>
-
+                    <div class="form-group">
+                        <label asp-for="Slider.SortOrder" class="control-label"></label>
+                        <input asp-for="Slider.SortOrder" class="form-control" />
+                        <span asp-validation-for="Slider.SortOrder" class="text-danger"></span>
+                    </div>
+                    <div class="form-group form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" asp-for="Slider.IsVideo" /> @Html.DisplayNameFor(model => model.Slider.IsVideo)
+                        </label>
+                    </div>
                    
                     <div class="form-group">
-                        <label asp-for="Slider.Url" class="control-label">Image</label>
-                        <br />
-                        <a href="@Model.Slider.Url" target="_blank">
-                            <img src="@Model.Slider.Url" class="img-fluid" style="max-height:120px" />
-                        </a>
+                       
+
+                        @if (Model.Slider.IsVideo == false)
+                        {
+
+                            <label asp-for="Slider.Url" class="control-label">Image</label>
+                            <br />
+                            <a href="@Model.Slider.Url" target="_blank">
+                                <img src="@Model.Slider.Url" class="img-fluid" style="max-height:120px" />
+                            </a>
+                        }
+                        else
+                        {
+                            <label asp-for="Slider.Url" class="control-label">Video</label>
+                            <br />
+                            <video controls="controls" id="myVideo" style="height:120px;">
+                                    <source src="@Model.Slider.Url" type="video/mp4">
+                                    Any alternate text.
+                                </video>
+                            
+                        }
+
+
+
+
+
                     </div>
                     <div class="form-group">
                         <label asp-for="Slider.Url" class="control-label">Upload to Replace Image</label>
